--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0.37"
+oauth2 = "4"
+webbrowser = "0.8"
+thiserror = "1.0"
+anyhow = "1.0"
+actix-web = "4"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
