--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ thiserror = "1.0"
 anyhow = "1.0"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+serde = "1.0"
