--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ anyhow = "1.0"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = "1.0"
+reqwest = { version = "0.11", features = ["json"] }
