First test on infrastructure
Writing a null object on the infrastructure for the request of a strava race.
Note that I haven't made any real requests yet, just TDD'ing an example.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = "1.0"
 reqwest = { version = "0.11", features = ["json"] }
+
+[dev-dependencies]
+http = "0.2"
