--- a/netlify/functions/get-strava-activity/Cargo.toml
+++ b/netlify/functions/get-strava-activity/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
+anyhow = "1.0.95"
 aws_lambda_events = "0.15.0"
 http = "1.2.0"
 hyper-util = "0.1.10"
