--- a/netlify/functions/get-strava-activity/Cargo.toml
+++ b/netlify/functions/get-strava-activity/Cargo.toml
@@ -10,5 +10,8 @@ http = "1.2.0"
 hyper-util = "0.1.10"
 lambda_runtime = "0.13.0"
 log = "0.4.17"
+reqwest = "0.12.12"
+serde = { version = "1.0.217", features = ["derive"]}
+serde_json = "1.0.135"
 simple_logger = "1.16.0"
 tokio = "1.27.0"
