--- a/netlify/functions/get-strava-activity/Cargo.toml
+++ b/netlify/functions/get-strava-activity/Cargo.toml
@@ -9,6 +9,7 @@ aws_lambda_events = "0.15.0"
 http = "1.2.0"
 hyper-util = "0.1.10"
 lambda_runtime = "0.13.0"
+lambda_runtime_api_client = "0.11.1"
 log = "0.4.17"
 reqwest = "0.12.12"
 serde = { version = "1.0.217", features = ["derive"]}
