Get netlify dev and netlify serve working
Auto-reload isn't there yet. Something with the socket connection. Build also says there are no functions, which is not true.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,11 @@
 [build]
-publish = "dist"
-build = "trunk build"
+base = "heart-rate-drift/"
+publish = "heart-rate-drift/dist/"
+command = "trunk build"
 
 [dev]
-command = "trunk serve"
+command = "trunk serve --config ./heart-rate-drift/trunk.toml"
 framework = "#static"
+
+[functions]
+directory = "netlify/functions"
