--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,14 @@
 [build]
-# base = "heart-rate-drift/"
-publish = "heart-rate-drift/dist/"
 command = "trunk build --config ./heart-rate-drift/trunk.toml"
-# functions = "netlify/functions"
 
-# [ context.production.environment]
-# NETLIFY_EXPERIMENTAL_BUILD_RUST_SOURCE = "true"
+[context.production]
+NETLIFY_EXPERIMENTAL_BUILD_RUST_SOURCE = "true"
 
 [dev]
 command = "trunk serve --config ./heart-rate-drift/trunk.toml"
 framework = "#static"
+
+[functions] 
+directory = "./netlify/functions"
+
 
