Move heart-rate-drift to web
This whole app is heart-rate-drift so I'm just making that part the 'web'. This also updates the workspace to account for renames.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
 members = [
-	"heart-rate-drift",
-	"netlify/functions/get-strava-activity"
+	"web",
+	"functions/strava-oauth-exchange"
 ]
