--- a/functions/strava-oauth-exchange/Cargo.toml
+++ b/functions/strava-oauth-exchange/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.95"
 lambda_http = "0.14.0"
+reqwest = "^0.12"
 tokio = { version = "1", features = ["macros"] }
 
 [dev-dependencies]
