--- a/functions/strava-oauth-exchange/Cargo.toml
+++ b/functions/strava-oauth-exchange/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.95"
 lambda_http = "0.14.0"
-reqwest = "^0.12"
+reqwest = { version = "^0.12", features = ["native-tls-vendored"] }
 tokio = { version = "1", features = ["macros"] }
 
 [dev-dependencies]
